# Verba

./: .gitignore  Cargo.toml  README.md
packaging/linux/: verba.desktop
packaging/metainfo/: dev.aronov.Verba.metainfo.xml
packaging/scripts/: install.sh  uninstall.sh
packaging/systemd/: verba.service
src/: app_runtime.rs  cli.rs  daemon.rs  error.rs  lib.rs  logging.rs  main.rs
src/config/: mod.rs  schema.rs  store.rs  validation.rs
src/gui/: actions.rs  main_window.rs  mod.rs  preset_editor.rs  settings_dialog.rs
src/ipc/: client.rs  constants.rs  server.rs
src/llm/: client.rs  errors.rs  mod.rs  prompt.rs  schema.rs
src/notify/: mod.rs  notify_send.rs
src/secrets/: mod.rs  secret_service.rs
src/tray/: indicator.rs
tests/: cli_config.rs  gui_shell.rs  ipc_runtime.rs  llm_notify.rs  packaging_layout.rs  preset_editor.rs  settings_dialog.rs  translation_flow.rs  tray_indicator.rs
